--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -26,6 +26,7 @@
 	overflow-wrap: break-word;
 	margin: 0;
 	padding: 0;
+	border-radius: 0%;
 }
 
 body {
@@ -47,4 +48,8 @@ a, button, input[type="submit"] {
 a:hover, button:hover, input[type="submit"]:hover {
 	opacity: 0.5;
 	cursor: pointer;
+}
+
+textarea:focus, input:focus {
+	outline: none;
 }
